trunk/Archive2/eb/cec7278277e5b9/output
main.cpp: In static member function 'static int A::fun()':
main.cpp:6:21: error: invalid use of member 'A::b' in static member function
     int a = fun() , b;
                     ^
main.cpp:7:30: error: from this location
     static int fun() {return b;}
                              ^
main.cpp:7:32: warning: control reaches end of non-void function [-Wreturn-type]
     static int fun() {return b;}
                                ^
