trunk/Archive2/eb/cec7278277e5b9/main.cpp

#include <vector>
#include <iostream>

class A {
    int a = fun() , b;
    static int fun() {return b;}
};

int main () {
    A a;
}